nassh: Improve encapsulation of agent terminal IO
Moves the userIO_ member to the Backend superclass and turns BACKEND_ID
into a non-static member. This allows the promptUser function to pick up
the agent's backend ID implicitly.
In addition, use nassh.msg for properly localized user-facing strings.

Change-Id: I3f1ec6824b7de8b568a607187982f8b3f34465e6

--- a/nassh/_locales/de/messages.json
+++ b/nassh/_locales/de/messages.json
@@ -220,6 +220,20 @@
 	"relay_retry": {
 		"message": "Wird erneut versucht..."
 	},
+	"request_pin_prompt": {
+		"message": "PIN zur Entsperrung von Schl\u00fcssel $FINGERPRINT$ auf '$READER$' eingeben ($NUM_TRIES$ Versuche verbleiben): ",
+		"placeholders": {
+			"fingerprint": {
+				"content": "$1"
+			},
+			"reader": {
+				"content": "$2"
+			},
+			"num_tries": {
+				"content": "$3"
+			}
+		}
+	},
 	"restore_prefs": {
 		"message": "Sicherung wiederherstellen"
 	},
