nassh: Show 'SCC not installed' error in terminal
Show a message in the terminal if the 'gsc' SSH agent backend is used
but the Smart Card Connector app is not installed.

Change-Id: I4f2e6883cece52c00edf12cc71274083b2cd3529

--- a/nassh/_locales/de/messages.json
+++ b/nassh/_locales/de/messages.json
@@ -237,6 +237,14 @@
 	"restore_prefs": {
 		"message": "Sicherung wiederherstellen"
 	},
+	"smart_card_connector_not_installed": {
+		"message": "Bitte installieren Sie den Smart Card Connector: $URL$",
+		"placeholders": {
+			"url": {
+				"content": "$1"
+			}
+		}
+	},
 	"shortcut_list_aria_label": {
 		"message": "Gespeicherte Verbindungen"
 	},
