--- a/nassh/_locales/en/messages.json
+++ b/nassh/_locales/en/messages.json
@@ -345,14 +345,18 @@
 	},
 	"REQUEST_PIN_PROMPT": {
 		"description": "Prompt shown when the user is requested to enter a smart card's PIN.",
-		"message": "Enter PIN to unlock key $FINGERPRINT$ on '$READER$' ($NUM_TRIES$ tries remaining): ",
+		"message": "Enter PIN to unlock key $FINGERPRINT$ on '$READER$ ($APPLET$)' ($NUM_TRIES$ tries remaining): ",
 		"placeholders": {
+			"applet": {
+				"content": "$3",
+				"example": "OpenPGP"
+			},
 			"fingerprint": {
 				"content": "$1",
 				"example": "1234ABCD"
 			},
 			"num_tries": {
-				"content": "$3",
+				"content": "$4",
 				"example": "3"
 			},
 			"reader": {
